kustomize/base/audio-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audio-api
  labels:
    app: audio-api
spec:
  type: ClusterIP
  selector:
    app: audio-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
