kustomize/base/audio-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audio-api
  labels:
    app: audio-api
    app.kubernetes.io/part-of: platform-core
spec:
  ingressClassName: nginx
  rules:
    - host: audio-api.platform-core.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audio-api
                port:
                  number: 80
